fix alignment issue with module units.

--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -699,6 +699,13 @@ body .shell section .module {
   -webkit-flex-direction: row;
   -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-align-items: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  -ms-flex-pack: space-between;
   -webkit-box-flex: 1 1 100%;
   -webkit-flex: 1 1 100%;
   -ms-flex: 1 1 100%;
@@ -725,23 +732,6 @@ body .shell section .module .unit, body .shell section .module .unit-1, body .sh
     -ms-flex-pack: center;
   }
   body .shell section .module {
-    -webkit-display: -webkit-flex;
-    -webkit-display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    -webkit-align-items: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-justify-content: space-between;
-    justify-content: space-between;
-    -ms-flex-pack: space-between;
     max-width: 1280px;
     width: 100%;
   }
