--- a/components/sass/_grid.scss
+++ b/components/sass/_grid.scss
@@ -18,6 +18,7 @@ body {
 
             .module {
                 @include flexContainer(row, wrap);
+                @include flexAxis(space-between, center);
                 @include flexItem(1, 1, 100%);
 
                 .unit, .unit-1, .unit-2, .unit-3, .unit-4, .unit-5, .unit-6, .unit-7, .unit-8, .unit-9, .unit-10 {
@@ -38,8 +39,6 @@ body {
             section {
                 @include flexAxis(center, center);
                 .module {
-                    @include flexContainer(row, wrap);
-                    @include flexAxis(space-between, center);
                     max-width: $laptop;
                     width: 100%;
 
